# Your-Own-Tour-Guid

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  add.py  app.py  debug_tts.py  pyproject.toml  requirements.txt
core/: config.py  pipeline_1_voice.py  pipeline_2_nlp.py  pipeline_3_indexing.py  pipeline_4_retrieval.py  pipeline_5_llm.py  pipeline_6_tts.py  pipeline_7_classifier.py
data/: text.txt
docs/: index.html
model/: data.pkl
model/.data/: serialization_id
model/data/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  112  113  114  115  116  117  118  119  12  120  121  122  123  124  126  127  128  129  13  130  131  132  133  134  135  (+127 more)
tools/: add.py  debug_tts.py  test_voice.py
