[project]
name = "ragy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "groq>=0.11.0",
    "nltk>=3.8.0",
    "numpy>=1.26.0",
    "openai-whisper>=20231117",
    "pdfplumber>=0.10.0",
    "pypdf>=6.7.5",
    "sentence-transformers>=3.0.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.7.0",
    "streamlit>=1.35.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
